[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Buttons/pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Buttons/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Buttons/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Fonts/font52.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Weapons/pigeon_gay.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/orange kid.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/UI/MainMenuRedo.gd" type="Script" id=7]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.613497, 0.923313 )
colors = PoolColorArray( 0.321569, 0.321569, 0.321569, 1, 0.270588, 0.384314, 0.262745, 1, 0.992157, 0.721569, 0.0745098, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 100

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_char = 3
font_data = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1144, 1120 )
rotation = -0.785398
scale = Vector2( 19.4696, 1600.7 )
texture = SubResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_bottom = 1.0
margin_right = 568.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 518.0
margin_bottom = 670.0
rect_pivot_offset = Vector2( -698, -10 )

[node name="PlayButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 468.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Play"

[node name="SettingsButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 468.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Settings"

[node name="QuitButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 468.0
margin_bottom = 251.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "Quit"

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 896, 344 )
scale = Vector2( 33, 33 )
texture = ExtResource( 5 )

[node name="HAXBUTTONNOB" type="Button" parent="Control"]
margin_left = 568.0
margin_top = 48.0
margin_right = 878.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "HAX >:("

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 352.0
margin_right = 512.0
margin_bottom = 661.0
custom_fonts/font = SubResource( 1 )
text = "Credits:
Jan Markus Salum
Mihkel Maspanov
Oskar Unn
Karl MÃ¼llerbeck
"
align = 1
valign = 1

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Control/HAXBUTTONNOB" to="." method="_on_HAXBUTTONNOB_pressed"]
